--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,16 +29,14 @@
   justify-content: center;
   padding: 20px 0;
   margin-bottom: 50px;
-
-  background-color: cadetblue;
 }
 
 .search-form>input {
   width: 200px;
-  border: none;
+  border: 1px solid #808080;
   outline: none;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 8px 118px 8px 16px;
   margin-right: 10px;
 
   font-size: 14px;
@@ -47,25 +45,61 @@
 
 .search-form>input::placeholder {
   font-size: 16px;
+  text-align: left;
 }
 
 .search-form>button {
-  width: 150px;
+  width: 90px;
   border: none;
-  border-radius: 3px;
+  border-radius: 8px;
   outline: none;
-  padding: 5px 20px 5px 20px;
-  background-color: #fff;
-  font-weight: 700;
+  padding: 8px 16px;
+
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #4E75FF;
+
   cursor: pointer;
 }
 
 .gallery {
   position: relative;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.photo-card {
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #808080;
+}
+
+.photo-card__info {
+  display: flex;
+  padding: 4px 20px;
+}
+
+.photo-card__info--item {
+  margin-right: 20px;
+  text-align: center;
+}
+
+.photo-card__info--item:nth-child(4) {
+  margin-right: 0;
+}
+
+.photo-card:nth-child(4n) {
+  margin-right: 0;
+}
+
+.gallery__item {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
 }
 
 .photo {
@@ -94,30 +128,4 @@
   pointer-events: none;
   opacity: 0;
   visibility: hidden;
-}
-
-.button-up {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  position: fixed;
-  top: 90%;
-  right: 3%;
-  padding: 6px 8px;
-
-  background-color: transparent;
-  border: 3px solid cadetblue;
-  border-radius: 30%;
-
-  cursor: pointer;
-  transition: transform 250ms linear, opacity 250ms linear;
-  transform: translateX(0%);
-
-  opacity: 1;
-}
-
-.button-up-hidden {
-  opacity: 0;
-  transform: translateX(200%);
 }
